--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,6 @@ name: CI
 
 on:
   push:
-  pull_request:
 
 jobs:
   build-and-test:
@@ -22,8 +21,5 @@ jobs:
       - name: Build
         run: cmake --build build -j 2
 
-      - name: Run tests (ctest)
-        run: ctest --test-dir build --output-on-failure
-
-      - name: Run test executable directly (optional)
+      - name: Run test executable directly
         run: ./build/test_runner --log_level=all
